--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             <center>
             </br>
                 <p>Ingresa el monto <strong>en dólares </strong>de tu compra y presioná <strong>Calcular</strong></p>
-            </br>
                
                     <form name="input_form" action="javascript:validate();">
 
@@ -52,10 +51,9 @@
         </div>
     </div>
 
-
-
     <footer class="footer-area">
         <div>Hecho por <a href="https://instagram.com/gonzadasdores" title="Gonzalo das Dores">Gonzalo das Dores</a></a>
+        <div>Cotizaciones extraídas de <a href="https://dolarsi.com" title="DolarSi.com">DolarSi.com</a></a>
         </div>
     </footer>
 
