--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <center>
         <meta charset="UTF-8">
 
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
         <title>Calculadora de Dólares | calcudasDores</title>
         <div class="page-header">
             <h2><strong>Calculadora de Dólares | calcudasDores</strong></h2>
