--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 
 <head>
+    
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
     <center>
         <meta charset="UTF-8">
 
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+        
 
         <title>Calculadora de Dólares | calcudasDores</title>
         <div class="page-header">
