--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    
+
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
     <center>
@@ -12,7 +12,8 @@
 
         <title>Calculadora de Dólares | calcudasDores</title>
         <div class="page-header">
-            <h2><strong>Calculadora de Dólares | calcudasDores</strong></h2>
+            <h2><strong>Calculadora de Dólares | calcudasDores </strong><img src="favicon-32x32.png" alt="calcudasDores" width="32"
+                height="32"></h2>
         </div>
 
         <script src="./calculaDores.js"></script>
