--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 
     <center>
         <meta charset="UTF-8">
-
-        
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculadora de Dólares | calcudasDores</title>
         <div class="page-header">
             <h2><strong>Calculadora de Dólares | calcudasDores </strong><img src="favicon-32x32.png" alt="calcudasDores" width="32"
