--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <footer class="footer-area">
-        <div>Hecho por <a href="www.linkedin.com/in/gonzalodasdores" title="Gonzalo das Dores">Gonzalo das Dores</a></a>
+        <div>Hecho por <a href="http://www.linkedin.com/in/gonzalodasdores" title="Gonzalo das Dores">Gonzalo das Dores</a></a>
         <div>Cotizaciones extraídas de <a href="https://dolarsi.com" title="DolarSi.com">DolarSi.com</a></a>
         </div>
     </footer>
